--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,11 @@
 <p><%= description %></p>
 
 <% posts.map(post => { %>
-    <h3><%= post.title %></h3>
-    <p><%= post.content %></p>
+    <h2><%= post.title %></h2>
+    <p>
+        <%= post.content.substring(0, 100) %>...
+        <a href="/posts/<%=post.title.toLowerCase()%>">Read more</a>
+    </p>
 <% }); %>
 
 <%- include('partials/footer') -%>
